feat: Implements new arch and terms
